# pacbundle

./: .gitignore  .pre-commit-config.yaml  LICENSE  PKGBUILD  pyproject.toml
pacbundle/: main.py
