[tool.poetry]
name = "pacbundle"
version = "0.1.0"
description = ""
authors = ["Kent Hou Man <knthmn0@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.9.0"}
pydantic = "^2.5.3"

[tool.poetry.scripts]
pacbundle = "pacbundle.main:app"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
pyright = "^1.1.347"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ['E', 'F', 'W', 'A', 'PL', 'I']
ignore = ['E501']
